--- a/app/src/main/res/layout/activity_add_charity.xml
+++ b/app/src/main/res/layout/activity_add_charity.xml
@@ -4,46 +4,80 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/bg_blue"
     tools:context=".AddCharity">
 
-    <RelativeLayout
-        android:id="@+id/relativeLayout2"
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:src="@drawable/header_shape">
+
+    </ImageView>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/profileHeader"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/dark_blue"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_margin="20dp"
+        android:paddingStart="20dp"
+        android:paddingEnd="20dp"
         app:layout_constraintTop_toTopOf="parent">
 
+        <ImageView
+            android:id="@+id/imgView_profileLogo"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:src="@drawable/imgapplogo"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <TextView
+            android:id="@+id/tv_profile"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:padding="60dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="160dp"
+            android:layout_toEndOf="@+id/imgView_profileLogo"
             android:text="@string/Tvadd_a_new_charity"
-            android:textColor="@color/white"
-            android:textSize="20sp"
-            android:textStyle="italic">
+            android:textAlignment="textEnd"
+            android:textColor="@color/dark_blue"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toEndOf="@+id/imgView_profileLogo"
+            app:layout_constraintTop_toTopOf="parent">
 
         </TextView>
-    </RelativeLayout>
 
-    <ImageView
-        android:layout_width="106dp"
-        android:layout_height="145dp"
-        android:src="@drawable/applogo_white"
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/loginCardView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_margin="30dp"
+        android:background="@color/white"
+        app:cardCornerRadius="30dp"
+        app:cardElevation="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
+        app:layout_constraintTop_toTopOf="parent">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="597dp"
         android:layout_gravity="center_horizontal"
-        android:background="#CADCF1"
+
         android:orientation="vertical"
         android:padding="24dp"
-        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
         tools:layout_editor_absoluteX="0dp">
 
 
@@ -59,8 +93,7 @@
             android:id="@+id/edtText_admin_CharName"
             android:layout_width="match_parent"
             android:layout_height="35dp"
-            android:background="@drawable/customer_edittext"
-            android:backgroundTint="#FEFEFE"
+            android:background="@drawable/user_edittext"
             android:drawablePadding="8dp"
             android:padding="8dp"
             android:textColor="@color/black"
@@ -80,7 +113,6 @@
             android:layout_width="match_parent"
             android:layout_height="35dp"
             android:background="@drawable/customer_edittext"
-            android:backgroundTint="#FDFDFD"
             android:drawablePadding="8dp"
             android:inputType="text"
             android:padding="8dp"
@@ -100,9 +132,8 @@
             android:layout_width="match_parent"
             android:layout_height="35dp"
             android:background="@drawable/customer_edittext"
-            android:backgroundTint="#FCFCFC"
             android:drawablePadding="8dp"
-            android:inputType="text"
+            android:inputType="number"
             android:padding="8dp"
             android:textColor="@color/black"
             android:textColorHighlight="@color/black" />
@@ -120,7 +151,6 @@
             android:layout_width="match_parent"
             android:layout_height="35dp"
             android:background="@drawable/customer_edittext"
-            android:backgroundTint="#FDFDFD"
             android:drawablePadding="8dp"
             android:inputType="text|textEmailAddress"
             android:padding="8dp"
@@ -140,7 +170,6 @@
             android:layout_width="match_parent"
             android:layout_height="35dp"
             android:background="@drawable/customer_edittext"
-            android:backgroundTint="#FDFDFD"
             android:drawablePadding="8dp"
             android:inputType="text"
             android:padding="8dp"
@@ -191,5 +220,6 @@
 
 
     </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
