--- a/app/src/main/res/layout/activity_update_charity.xml
+++ b/app/src/main/res/layout/activity_update_charity.xml
@@ -6,199 +6,233 @@
     android:layout_height="match_parent"
     tools:context=".UpdateCharity">
 
-    <RelativeLayout
-        android:id="@+id/relativeLayout2"
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:src="@drawable/header_shape">
+
+    </ImageView>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/profileHeader"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/dark_blue"
+        android:layout_margin="20dp"
+        android:paddingStart="20dp"
+        android:paddingEnd="20dp"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/imgView_profileLogo"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:src="@drawable/imgapplogo"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/tv_profile"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="160dp"
+            android:layout_toEndOf="@+id/imgView_profileLogo"
+            android:text="@string/Tvupdate_charity"
+            android:textAlignment="textEnd"
+            android:textColor="@color/dark_blue"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toEndOf="@+id/imgView_profileLogo"
+            app:layout_constraintTop_toTopOf="parent">
+
+        </TextView>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/loginCardView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="100dp"
+        android:layout_marginEnd="30dp"
+        android:background="@color/white"
+        app:cardCornerRadius="30dp"
+        app:cardElevation="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:padding="60dp"
-            android:text="@string/Tvupdate_charity"
-            android:textColor="@color/white"
-            android:textSize="20sp"
-            android:textStyle="italic">
+            android:layout_gravity="center_horizontal"
+            android:layout_margin="10dp"
+            android:orientation="vertical"
+            android:padding="24dp"
 
-        </TextView>
-    </RelativeLayout>
-
-    <ImageView
-        android:layout_width="106dp"
-        android:layout_height="145dp"
-        android:src="@drawable/applogo_white"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/imageView"
+            tools:layout_editor_absoluteX="0dp">
 
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:layout_gravity="center_horizontal"
-        android:background="#CADCF1"
-        android:orientation="vertical"
-        android:padding="24dp"
-        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
-        tools:layout_editor_absoluteX="0dp">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingTop="16dp"
+                android:text="@string/Tvname"
+                android:textColor="#0A1551"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/edtText_admin_CharName"
+                android:layout_width="match_parent"
+                android:layout_height="35dp"
+                android:background="@drawable/customer_edittext"
+                android:drawablePadding="8dp"
+                android:padding="8dp"
+                android:textColor="@color/black"
+                android:textColorHighlight="@color/black" />
 
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingTop="16dp"
-            android:text="@string/Tvname"
-            android:textColor="#0A1551"
-            android:textStyle="bold" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingTop="16dp"
+                android:text="Address"
+                android:textColor="#0A1551"
+                android:textStyle="bold" />
 
-        <EditText
-            android:id="@+id/edtText_admin_CharName"
-            android:layout_width="match_parent"
-            android:layout_height="35dp"
-            android:background="@drawable/customer_edittext"
-            android:backgroundTint="#FEFEFE"
-            android:drawablePadding="8dp"
-            android:padding="8dp"
-            android:textColor="@color/black"
-            android:textColorHighlight="@color/black" />
+            <EditText
+                android:id="@+id/edtText_admin_char_address"
+                android:layout_width="match_parent"
+                android:layout_height="35dp"
+                android:background="@drawable/customer_edittext"
+                android:drawablePadding="8dp"
+                android:inputType="text"
+                android:padding="8dp"
+                android:textColor="@color/black"
+                android:textColorHighlight="@color/black" />
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingTop="16dp"
+                android:text="@string/Tvcontact_number"
+                android:textColor="#0A1551"
+                android:textStyle="bold" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingTop="16dp"
-            android:text="Address"
-            android:textColor="#0A1551"
-            android:textStyle="bold" />
+            <EditText
+                android:id="@+id/edtText_admin_char_contact"
+                android:layout_width="match_parent"
+                android:layout_height="35dp"
+                android:background="@drawable/customer_edittext"
+                android:drawablePadding="8dp"
+                android:inputType="text"
+                android:padding="8dp"
+                android:textColor="@color/black"
+                android:textColorHighlight="@color/black" />
 
-        <EditText
-            android:id="@+id/edtText_admin_char_address"
-            android:layout_width="match_parent"
-            android:layout_height="35dp"
-            android:background="@drawable/customer_edittext"
-            android:backgroundTint="#FDFDFD"
-            android:drawablePadding="8dp"
-            android:inputType="text"
-            android:padding="8dp"
-            android:textColor="@color/black"
-            android:textColorHighlight="@color/black" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingTop="16dp"
+                android:text="@string/TVemail"
+                android:textColor="#0A1551"
+                android:textStyle="bold" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingTop="16dp"
-            android:text="@string/Tvcontact_number"
-            android:textColor="#0A1551"
-            android:textStyle="bold" />
+            <EditText
+                android:id="@+id/edtText_admin_char_email"
+                android:layout_width="match_parent"
+                android:layout_height="35dp"
+                android:background="@drawable/customer_edittext"
+                android:drawablePadding="8dp"
+                android:inputType="text|textEmailAddress"
+                android:padding="8dp"
+                android:textColor="@color/black"
+                android:textColorHighlight="@color/black" />
 
-        <EditText
-            android:id="@+id/edtText_admin_char_contact"
-            android:layout_width="match_parent"
-            android:layout_height="35dp"
-            android:background="@drawable/customer_edittext"
-            android:backgroundTint="#FCFCFC"
-            android:drawablePadding="8dp"
-            android:inputType="text"
-            android:padding="8dp"
-            android:textColor="@color/black"
-            android:textColorHighlight="@color/black" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingTop="16dp"
+                android:text="@string/Tvdescription"
+                android:textColor="#0A1551"
+                android:textStyle="bold" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingTop="16dp"
-            android:text="@string/TVemail"
-            android:textColor="#0A1551"
-            android:textStyle="bold" />
+            <EditText
+                android:id="@+id/edtText_admin_char_description"
+                android:layout_width="match_parent"
+                android:layout_height="35dp"
+                android:background="@drawable/customer_edittext"
+                android:drawablePadding="8dp"
+                android:inputType="text"
+                android:padding="8dp"
+                android:textColor="@color/black"
+                android:textColorHighlight="@color/black" />
 
-        <EditText
-            android:id="@+id/edtText_admin_char_email"
-            android:layout_width="match_parent"
-            android:layout_height="35dp"
-            android:background="@drawable/customer_edittext"
-            android:backgroundTint="#FDFDFD"
-            android:drawablePadding="8dp"
-            android:inputType="text|textEmailAddress"
-            android:padding="8dp"
-            android:textColor="@color/black"
-            android:textColorHighlight="@color/black" />
+            <Button
+                android:id="@+id/btnPickImage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="16dp"
+                android:backgroundTint="@color/light_blue"
+                android:text="@string/PickImageBtn"
+                android:textSize="14sp" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingTop="16dp"
-            android:text="@string/Tvdescription"
-            android:textColor="#0A1551"
-            android:textStyle="bold" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingTop="16dp"
+                android:text="@string/Tvupload_image"
+                android:textColor="#0A1551"
+                android:textStyle="bold" />
 
-        <EditText
-            android:id="@+id/edtText_admin_char_description"
-            android:layout_width="match_parent"
-            android:layout_height="35dp"
-            android:background="@drawable/customer_edittext"
-            android:backgroundTint="#FDFDFD"
-            android:drawablePadding="8dp"
-            android:inputType="text"
-            android:padding="8dp"
-            android:textColor="@color/black"
-            android:textColorHighlight="@color/black" />
-
-        <Button
-            android:id="@+id/btnPickImage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="16dp"
-            android:backgroundTint="@color/light_blue"
-            android:text="@string/PickImageBtn"
-            android:textSize="14sp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingTop="16dp"
-            android:text="@string/Tvupload_image"
-            android:textColor="#0A1551"
-            android:textStyle="bold" />
-
-        <ImageView
-            android:id="@+id/iv_admin_char_img"
-            android:layout_width="70dp"
-            android:layout_height="50dp"
-            app:layout_constraintStart_toEndOf="@+id/textView13"
-            app:layout_constraintTop_toBottomOf="@+id/etfoodcharityDescription"
-            app:srcCompat="@drawable/baseline_image_24" />
+            <ImageView
+                android:id="@+id/iv_admin_char_img"
+                android:layout_width="70dp"
+                android:layout_height="50dp"
+                app:layout_constraintStart_toEndOf="@+id/textView13"
+                app:layout_constraintTop_toBottomOf="@+id/etfoodcharityDescription"
+                app:srcCompat="@drawable/baseline_image_24" />
 
 
-        <Button
-            android:id="@+id/BtnUpdateCharity"
-            android:layout_width="@dimen/btnWidth"
-            android:layout_height="@dimen/btnHeight"
-            android:layout_gravity="center"
-            android:layout_marginTop="10dp"
-            android:backgroundTint="@color/light_blue"
-            android:text="@string/btnUpdate"
-            android:textSize="14sp">
+            <Button
+                android:id="@+id/BtnUpdateCharity"
+                android:layout_width="@dimen/btnWidth"
+                android:layout_height="@dimen/btnHeight"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
+                android:backgroundTint="@color/light_blue"
+                android:text="@string/btnUpdate"
+                android:textSize="14sp">
 
-        </Button>
+            </Button>
 
-        <Button
-            android:id="@+id/btnDelete"
-            android:layout_width="@dimen/btnWidth"
-            android:layout_height="@dimen/btnHeight"
-            android:layout_gravity="center"
-            android:backgroundTint="@color/red"
-            android:text="@string/btnDelete"
-            android:textColor="@color/white"
-            android:textSize="14sp">
+            <Button
+                android:id="@+id/btnDelete"
+                android:layout_width="@dimen/btnWidth"
+                android:layout_height="@dimen/btnHeight"
+                android:layout_gravity="center"
+                android:backgroundTint="@color/red"
+                android:text="@string/btnDelete"
+                android:textColor="@color/white"
+                android:textSize="14sp">
 
-        </Button>
+            </Button>
 
 
-    </LinearLayout>
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
