--- a/app/src/main/res/layout/activity_update_post.xml
+++ b/app/src/main/res/layout/activity_update_post.xml
@@ -6,118 +6,128 @@
     android:layout_height="match_parent"
     tools:context=".UpdatePost">
 
-    <LinearLayout
-        android:layout_width="372dp"
-        android:layout_height="565dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginStart="21dp"
-        android:layout_marginTop="81dp"
-        android:orientation="vertical"
-        android:padding="24dp"
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="30dp"
+        app:cardCornerRadius="10dp"
+        app:cardElevation="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <androidx.appcompat.widget.LinearLayoutCompat
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="68dp">
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:orientation="vertical"
+            android:padding="24dp">
 
-            <ImageView
-                android:id="@+id/UpdatePostImageView"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:src="@drawable/imgapplogo"></ImageView>
+            <androidx.appcompat.widget.LinearLayoutCompat
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <ImageView
+                    android:id="@+id/UpdatePostImageView"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:src="@drawable/imgapplogo"></ImageView>
+
+                <TextView
+                    android:id="@+id/tvUpdatePost"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+
+                    android:paddingTop="10dp"
+                    android:paddingBottom="10dp"
+                    android:text="@string/UpdatePostTv"
+                    android:textAlignment="viewEnd"
+                    android:textColor="@color/dark_blue"
+                    android:textSize="30dp"
+                    android:textStyle="bold"></TextView>
+
+            </androidx.appcompat.widget.LinearLayoutCompat>
 
             <TextView
-                android:id="@+id/tvUpdatePost"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginEnd="20dp"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
-                android:text="@string/UpdatePostTv"
-                android:textAlignment="viewEnd"
-                android:textColor="@color/dark_blue"
-                android:textSize="30dp"
+                android:id="@+id/tvCharityName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingTop="16dp"
+                android:text="@string/NameCharTv"
+                android:textColor="@color/light_blue"
                 android:textStyle="bold"></TextView>
 
-        </androidx.appcompat.widget.LinearLayoutCompat>
+            <EditText
+                android:id="@+id/edtText_post_name_update"
+                android:layout_width="match_parent"
+                android:layout_height="35dp"
+                android:background="@drawable/user_edittext"
+                android:drawablePadding="8dp"
+                android:padding="8dp"
+                android:textColor="@color/light_blue"
+                android:textColorHighlight="@color/black" />
 
-        <TextView
-            android:id="@+id/tvCharityName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingTop="16dp"
-            android:text="@string/NameCharTv"
-            android:textColor="@color/light_blue"
-            android:textStyle="bold"></TextView>
+            <TextView
+                android:id="@+id/tvCharityDescription"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingTop="16dp"
+                android:text="@string/DescriptionTv"
+                android:textColor="@color/light_blue"
+                android:textStyle="bold"></TextView>
 
-        <EditText
-            android:id="@+id/edtText_post_name_update"
-            android:layout_width="match_parent"
-            android:layout_height="35dp"
-            android:background="@drawable/user_edittext"
-            android:drawablePadding="8dp"
-            android:padding="8dp"
-            android:textColor="@color/light_blue"
-            android:textColorHighlight="@color/black" />
+            <EditText
+                android:id="@+id/edtText_post_description_update"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/user_edittext"
+                android:drawablePadding="8dp"
+                android:gravity="top|start"
+                android:inputType="textMultiLine"
+                android:padding="8dp"
+                android:scrollbars="vertical"
+                android:textColor="@color/light_blue"
+                android:textColorHighlight="@color/black" />
 
-        <TextView
-            android:id="@+id/tvCharityDescription"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingTop="16dp"
-            android:text="@string/DescriptionTv"
-            android:textColor="@color/light_blue"
-            android:textStyle="bold"></TextView>
+            <Button
+                android:id="@+id/btnPickImage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="16dp"
+                android:backgroundTint="@color/light_blue"
+                android:text="@string/PickImageBtn"
+                android:textSize="14sp" />
 
-        <EditText
-            android:id="@+id/edtText_post_description_update"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/user_edittext"
-            android:drawablePadding="8dp"
-            android:padding="8dp"
-            android:textColor="@color/light_blue"
-            android:textColorHighlight="@color/black"
-            android:inputType="textMultiLine"
-            android:gravity="top|start"
-            android:scrollbars="vertical" />
+            <ImageView
+                android:id="@+id/ivAdminPostUpdateimg"
+                android:layout_width="70dp"
+                android:layout_height="50dp"
+                app:srcCompat="@drawable/baseline_image_24" />
 
-        <Button
-            android:id="@+id/btnPickImage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="16dp"
-            android:backgroundTint="@color/light_blue"
-            android:text="@string/PickImageBtn"
-            android:textSize="14sp" />
+            <Button
+                android:id="@+id/btnUpdatePost"
+                android:layout_width="@dimen/btnWidth"
+                android:layout_height="61dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="30dp"
+                android:backgroundTint="@color/dark_blue"
+                android:text="@string/UpdatePostBtn"
+                android:textSize="14sp" />
 
-        <ImageView
-            android:id="@+id/ivAdminPostUpdateimg"
-            android:layout_width="70dp"
-            android:layout_height="50dp"
-            app:srcCompat="@drawable/baseline_image_24" />
+            <Button
+                android:id="@+id/btnDeletePost"
+                android:layout_width="@dimen/btnWidth"
+                android:layout_height="61dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="30dp"
+                android:backgroundTint="@color/red"
+                android:text="@string/DeletePostBtn"
+                android:textSize="14sp" />
 
-        <Button
-            android:id="@+id/btnUpdatePost"
-            android:layout_width="@dimen/btnWidth"
-            android:layout_height="61dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="30dp"
-            android:backgroundTint="@color/dark_blue"
-            android:text="@string/UpdatePostBtn"
-            android:textSize="14sp" />
+        </LinearLayout>
 
-        <Button
-            android:id="@+id/btnDeletePost"
-            android:layout_width="@dimen/btnWidth"
-            android:layout_height="61dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="30dp"
-            android:backgroundTint="@color/red"
-            android:text="@string/DeletePostBtn"
-            android:textSize="14sp" />
+    </androidx.cardview.widget.CardView>
 
-    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
